--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,10 +19,12 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore
+        dotnet-version: 7.0.x
+    
     - name: Build
+      run: cd Sources/
+      run: dotnet restore
       run: dotnet build --no-restore
     - name: Test
+      run: cd Sources/
       run: dotnet test --no-build --verbosity normal
