--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,9 +22,11 @@ jobs:
         dotnet-version: 7.0.x
     
     - name: Build
-      run: cd Sources/
-      run: dotnet restore
-      run: dotnet build --no-restore
+      run: 
+        cd Sources/
+        dotnet restore
+        dotnet build --no-restore
     - name: Test
-      run: cd Sources/
-      run: dotnet test --no-build --verbosity normal
+      run: 
+        cd Sources/
+        dotnet test --no-build --verbosity normal
