--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,11 +22,11 @@ jobs:
         dotnet-version: 7.0.x
     
     - name: Build
-      run: 
+      run: |
         cd Sources/
         dotnet restore
         dotnet build --no-restore
     - name: Test
-      run: 
+      run: |
         cd Sources/
         dotnet test --no-build --verbosity normal
