--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,15 +34,11 @@ jobs:
         dotnet test --no-build --verbosity normal
 
     - name: Code_Inspection
-      image: hub.codefirst.iut.uca.fr/marc.chevaldonne/codefirst-dronesonarplugin-dotnet7
-      secrets: 
-        sonar_token: ${{ secrets.SECRET_SONAR_LOGIN }}
-      with:
-        sonar_host : https://codefirst.iut.uca.fr/sonar/
+      container: hub.codefirst.iut.uca.fr/marc.chevaldonne/codefirst-dronesonarplugin-dotnet7
       run: |
         cd Sources/
         dotnet restore OpenLibraryWS_Wrapper.sln
-        dotnet sonarscanner begin /k:CICD_3A_CorentinRICHARD_dotnet /d:sonar.host.url=$SONAR_HOST /d:sonar.coverageReportPaths="coveragereport/SonarQube.xml" /d:sonar.coverage.exclusions="Tests/**" /d:sonar.login=$SONAR_TOKEN
+        dotnet sonarscanner begin /k:CICD_3A_CorentinRICHARD_dotnet /d:sonar.host.url="https://codefirst.iut.uca.fr/sonar/" /d:sonar.coverageReportPaths="coveragereport/SonarQube.xml" /d:sonar.coverage.exclusions="Tests/**" /d:sonar.login=${{ secrets.SECRET_SONAR_LOGIN }}
         dotnet build OpenLibraryWS_Wrapper.sln -c Release --no-restore
         dotnet test OpenLibraryWS_Wrapper.sln --logger trx --no-restore /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura --collect "XPlat Code Coverage"
         reportgenerator -reports:"**/coverage.cobertura.xml" -reporttypes:SonarQube -targetdir:"coveragereport"
