--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,8 +33,10 @@ jobs:
         cd Sources/
         dotnet test --no-build --verbosity normal
 
+    - name: Setup_Sonar
+      uses: hub.codefirst.iut.uca.fr/marc.chevaldonne/codefirst-dronesonarplugin-dotnet7
+
     - name: Code_Inspection
-      container: hub.codefirst.iut.uca.fr/marc.chevaldonne/codefirst-dronesonarplugin-dotnet7
       run: |
         cd Sources/
         dotnet restore OpenLibraryWS_Wrapper.sln
@@ -42,5 +44,5 @@ jobs:
         dotnet build OpenLibraryWS_Wrapper.sln -c Release --no-restore
         dotnet test OpenLibraryWS_Wrapper.sln --logger trx --no-restore /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura --collect "XPlat Code Coverage"
         reportgenerator -reports:"**/coverage.cobertura.xml" -reporttypes:SonarQube -targetdir:"coveragereport"
-        dotnet publish OpenLibraryWS_Wrapper.sln -c Release --no-restore -o ${{ github.workspace }}/build/release
-        dotnet sonarscanner end /d:sonar.login=$SONAR_TOKEN
+        dotnet publish OpenLibraryWS_Wrapper.sln -c Release --no-restore -o CI_PROJECT_DIR/build/release
+        dotnet sonarscanner end /d:sonar.login=${{ secrets.SECRET_SONAR_LOGIN }}
